// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioBorderedBox renders correctly 1`] = `
<DocumentFragment>
  .cache-5jm5b {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  display: block;
}

.cache-kmnzss {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.cache-1c9gspx {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  line-height: 24px;
  font-weight: 500;
  height: 32px;
  cursor: pointer;
}

.cache-1c9gspx.cache-1c9gspx {
  margin-right: 4px;
}

.cache-1c9gspx:hover .e1duuirp2,
.cache-1c9gspx:focus .e1duuirp2 {
  background-color: rgba(212,218,231,0.25);
  border-radius: 50%;
}

.cache-1c9gspx:hover .e1duuirp2>.e1duuirp3,
.cache-1c9gspx:focus .e1duuirp2>.e1duuirp3 {
  fill: #4f0599;
}

.cache-10e5cfc {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.cache-14h2zyo {
  fill: #dce1eb;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-14h2zyo.cache-14h2zyo {
  vertical-align: middle;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

<div
    class="cache-5jm5b e13z6rra1"
  >
    <div
      class="cache-kmnzss e13z6rra0"
    >
      <label
        class="e1duuirp1 cache-1c9gspx"
        for="radio-choice"
      >
        <div
          class="e1duuirp2 cache-10e5cfc"
        >
          <svg
            class="e1duuirp3 etwatq50 cache-14h2zyo"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
            />
          </svg>
        </div>
        Choice
        <input
          aria-checked="false"
          class="cache-cujed6 e1duuirp0"
          id="radio-choice"
          name="radio"
          tabindex="0"
          type="radio"
          value="choice"
        />
      </label>
      <span />
    </div>
    <div>
      Choice description
    </div>
  </div>
</DocumentFragment>
`;

exports[`RadioBorderedBox renders correctly when checked 1`] = `
<DocumentFragment>
  .cache-z9adck {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  display: block;
  border: 1px solid #4f0599!important;
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-kmnzss {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.cache-1c9gspx {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  line-height: 24px;
  font-weight: 500;
  height: 32px;
  cursor: pointer;
}

.cache-1c9gspx.cache-1c9gspx {
  margin-right: 4px;
}

.cache-1c9gspx:hover .e1duuirp2,
.cache-1c9gspx:focus .e1duuirp2 {
  background-color: rgba(212,218,231,0.25);
  border-radius: 50%;
}

.cache-1c9gspx:hover .e1duuirp2>.e1duuirp3,
.cache-1c9gspx:focus .e1duuirp2>.e1duuirp3 {
  fill: #4f0599;
}

.cache-10e5cfc {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.cache-d37612 {
  fill: #4f0599;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-d37612.cache-d37612 {
  vertical-align: middle;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

<div
    class="cache-z9adck e13z6rra1"
  >
    <div
      class="cache-kmnzss e13z6rra0"
    >
      <label
        class="e1duuirp1 cache-1c9gspx"
        for="radio-choice"
      >
        <div
          class="e1duuirp2 cache-10e5cfc"
        >
          <svg
            class="e1duuirp3 etwatq50 cache-d37612"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M12,7A5,5 0 0,0 7,12A5,5 0 0,0 12,17A5,5 0 0,0 17,12A5,5 0 0,0 12,7Z"
            />
          </svg>
        </div>
        Choice
        <input
          aria-checked="true"
          checked=""
          class="cache-cujed6 e1duuirp0"
          id="radio-choice"
          name="radio"
          tabindex="0"
          type="radio"
          value="choice"
        />
      </label>
      <span />
    </div>
    <div>
      Choice description
    </div>
  </div>
</DocumentFragment>
`;

exports[`RadioBorderedBox renders correctly when disabled 1`] = `
<DocumentFragment>
  .cache-hug1xt {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  display: block;
  cursor: not-allowed!important;
  color: #b2b6c3;
}

.cache-kmnzss {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.cache-1beqi8x {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  line-height: 24px;
  font-weight: 500;
  height: 32px;
  cursor: pointer;
  color: #b2b6c3;
  cursor: not-allowed;
}

.cache-1beqi8x.cache-1beqi8x {
  margin-right: 4px;
}

.cache-10e5cfc {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.cache-14h2zyo {
  fill: #dce1eb;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-14h2zyo.cache-14h2zyo {
  vertical-align: middle;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

<div
    class="cache-hug1xt e13z6rra1"
    disabled=""
  >
    <div
      class="cache-kmnzss e13z6rra0"
    >
      <label
        class="e1duuirp1 cache-1beqi8x"
        disabled=""
        for="radio-choice"
      >
        <div
          class="e1duuirp2 cache-10e5cfc"
        >
          <svg
            class="e1duuirp3 etwatq50 cache-14h2zyo"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
            />
          </svg>
        </div>
        Choice
        <input
          aria-checked="false"
          aria-disabled="true"
          class="cache-cujed6 e1duuirp0"
          disabled=""
          id="radio-choice"
          name="radio"
          style="pointer-events: none;"
          type="radio"
          value="choice"
        />
      </label>
      <span />
    </div>
    <div>
      Choice description
    </div>
  </div>
</DocumentFragment>
`;

exports[`RadioBorderedBox renders correctly with label desc and badge 1`] = `
<DocumentFragment>
  .cache-hug1xt {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  display: block;
  cursor: not-allowed!important;
  color: #b2b6c3;
}

.cache-kmnzss {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.cache-1beqi8x {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  line-height: 24px;
  font-weight: 500;
  height: 32px;
  cursor: pointer;
  color: #b2b6c3;
  cursor: not-allowed;
}

.cache-1beqi8x.cache-1beqi8x {
  margin-right: 4px;
}

.cache-10e5cfc {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.cache-14h2zyo {
  fill: #dce1eb;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-14h2zyo.cache-14h2zyo {
  vertical-align: middle;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-9nurcj {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background-color: #ef5774;
  color: #fff;
  font-size: 12px;
  line-height: 24px;
  height: 24px;
}

<div
    class="cache-hug1xt e13z6rra1"
    disabled=""
  >
    <div
      class="cache-kmnzss e13z6rra0"
    >
      <label
        class="e1duuirp1 cache-1beqi8x"
        disabled=""
        for="radio-choice"
      >
        <div
          class="e1duuirp2 cache-10e5cfc"
        >
          <svg
            class="e1duuirp3 etwatq50 cache-14h2zyo"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
            />
          </svg>
        </div>
        Choice
        <input
          aria-checked="false"
          aria-disabled="true"
          class="cache-cujed6 e1duuirp0"
          disabled=""
          id="radio-choice"
          name="radio"
          style="pointer-events: none;"
          type="radio"
          value="choice"
        />
      </label>
      <span>
        (something)
      </span>
       
      <span
        aria-label="warning"
        class="egvl2gp0 cache-9nurcj"
        role="status"
      >
        Badge
      </span>
    </div>
    <div>
      Choice description
    </div>
  </div>
</DocumentFragment>
`;
